# personal-rag

./: .gitignore  README.md  main.py  pyproject.toml
src/: docs.md  embedding.py  lib.py  proompting.py  secrets.py  vectordb.py
