[tool.poetry]
name = "personal-rag"
version = "0.1.0"
description = ""
authors = ["Daan Vermunt <daanvermunt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymilvus = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
